# mdhpc

./: .gitignore  CMakeLists.txt  build.sh  requirements.txt
data/: time
data/05_scaling/: time  time5-11l  time5-12l  time5-2
data/06_scaling/: time6
data/07_cluster_size/: data_05l.csv  data_08l.csv  data_15l.csv  data_16.csv
data/07_cluster_size/0820_run/: data_01l.csv  data_02l.csv  data_03l.csv  data_04l.csv  data_05l.csv  data_06l.csv  data_07l.csv  data_08l.csv  data_09l.csv  data_10l.csv  data_11l.csv  data_12l.csv  data_13l.csv  data_14l.csv  data_15l.csv  data_16l.csv
data/07_cluster_size/old_run/: data_06l.csv  data_07l.csv  data_09l.csv  data_10l.csv  data_11l.csv  data_12l.csv  data_13l.csv  data_14l.csv
data/07_timestep/: 0.100000.timestep  1.000000.timestep  10.000000.timestep  100.000000.timestep  15.000000.timestep  20.000000.timestep  50.000000.timestep
data/08_pot_tests/: 08_pot_1_test_923.csv  08_pot_ghost_test.csv  08_pot_merged_test.csv  08_pot_merged_test_923.csv  08_pot_merged_test_badneighbors.csv  energy_conservation.csv
data/09_runs/: coolfast.csv  coolslow.csv  firstrun.err  firstrun.xyz  heat_fast.csv  heat_slow.csv  large.err  large.out  md.out  traj_failed.xyz  traj_large.xyz
milestones/: CMakeLists.txt
milestones/01/: CMakeLists.txt  main.cpp
milestones/02/: CMakeLists.txt  main.cpp
milestones/03/: CMakeLists.txt  main.cpp
milestones/04/: 04.cpp  CMakeLists.txt  timesteps.sh
milestones/05/: 05.cpp  CMakeLists.txt  scaling.sh
milestones/06/: 06.cpp  CMakeLists.txt  scaling.sh
milestones/07/: 07.cpp  07_timestep.cpp  CMakeLists.txt  clusters.sh  timesteps.sh
milestones/07/generated_clusters/: cluster_07l.xyz  cluster_09l.xyz
milestones/07/mackay/: CMakeLists.txt
milestones/08/: 08.cpp  CMakeLists.txt  run.sh
milestones/08/generated_clusters/: cluster_01l.xyz  cluster_02l.xyz  cluster_06l.xyz  cluster_10l.xyz  cluster_12l.xyz  cluster_13l.xyz  cluster_15l.xyz  cluster_16l.xyz
milestones/09/: 09.cpp  CMakeLists.txt  analysis.ovito  run.job  run.sh  run_dev.job  run_large.job
plt/: Run 23-07-19-1530.csv  plot.py  scaling_simple.py
runs/: quick.err  quick.out
src/: CMakeLists.txt  analysis.cpp  analysis.h  atoms.cpp  atoms.h  hello.cpp  lj.cpp  lj.h  lj_direct_summation.cpp  lj_direct_summation.h  thermostat.cpp  thermostat.h  types.h  verlet.cpp  verlet.h
tests/: CMakeLists.txt  test_lj_direct_summation.cpp  test_neighbors.cpp  test_thermostat.cpp  test_verlet.cpp
